AR-z-ISTIO-SubsetLevelTrafficSplitting/ISTIO-classic/08Fservice_clusterip-Server2-v1v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: app08
  name: app08
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    name: app08
  sessionAffinity: None
  type: ClusterIP
