AR-z-ISTIO-SubsetLevelTrafficSplitting/ISTIO-classic/08_destination-rule-Server2-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-app08
  #namespace: istio-system
spec:
  host: app08.test-ar-istio.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
